reader/style.css
body{
    background-color: rgb(255, 255, 255);
    font-family: Arial;
    color: black;
    font-size: 15px;
    text-align: left;
}

@font-face {
    font-family: Evermore;
    src: url("Evermore.woff");
}

@font-face {
    font-family: Extraoin;
    src: url("Extraoin\ Zhurdlyou\ Anarchy.woff");
}

h1{
    font-family: 'Extraoin';
    color: rgb(250, 22, 22);
    font-size: 90px;
    text-align: center;
}

h2{
    font-family: 'Extraoin';
    color: rgb(250, 22, 22);
    font-size: 32px;
    text-align: center;
}

h3{
    font-family: Arial;
    color: black;
    font-size: 14px;
    text-align: right;
}

.column {
    float: left;
  }
  
  .left {
    width: 60%;
  }
  
  .right {
    width: 40%;
  }

